--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/fortify": "^1.18",
+        "kreait/laravel-firebase": "^5.4",
+        "laravel/fortify": "^1.17",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.5"
     },
